# state_constrained

./: .gitignore  README.md  guide.md  pyproject.toml
checkpoints/: pinn_cylinder_n20_k2_eps0.01.pt  pinn_cylinder_n20_k2_eps0.03.pt  pinn_cylinder_n20_k2_eps0.1.pt  pinn_cylinder_n20_k2_eps0.3.pt  pinn_cylinder_n20_k2_eps1.pt  pinn_cylinder_n2_k2_eps0.05.pt  pinn_cylinder_n2_k2_eps0.1.pt  pinn_cylinder_n2_k2_eps0.2.pt  pinn_cylinder_n2_k2_eps0.5.pt  pinn_cylinder_n3_k2_eps0.05.pt  pinn_cylinder_n3_k2_eps0.1.pt  pinn_cylinder_n3_k2_eps0.2.pt  pinn_cylinder_n3_k2_eps0.5.pt  pinn_cylinder_n5_k2_eps0.05.pt  pinn_cylinder_n5_k2_eps0.1.pt  pinn_cylinder_n5_k2_eps0.2.pt  pinn_cylinder_n5_k2_eps0.5.pt
configs/: 5d_k3.yaml  state_constrained_1d.yaml  state_constrained_cylinder.yaml
experiments/: plot_checkpoint_heatmap.py  plot_checkpoint_slices.py  state_constrained_1d.py  state_constrained_cylinder.py
pinn_hj/: __init__.py  config.py  cylinder_domain.py  distance.py  hamiltonians.py  networks.py  trainers.py  utils.py
scripts/: __init__.py  plot.py  train.py
state_constrained.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
